--- a/Keploy/test-suite-10/mocks.yaml
+++ b/Keploy/test-suite-10/mocks.yaml
@@ -3,16 +3,208 @@ kind: SQL
 name: mocks
 spec:
     metadata:
-        operation: ""
-        responseOperation: MySQLErr
+        operation: MySQLQuery
+        responseOperation: MySQLOK
     requests:
         - header:
-            packet_length: 0
+            packet_length: 193
             packet_number: 0
-          message: null
+            packet_type: MySQLQuery
+          message:
+            command: 3
+            query: |-
+                CREATE TABLE IF NOT EXISTS url_map (
+                		id char(8) NOT NULL,
+                		redirect_url varchar(150) NOT NULL UNIQUE,
+                		created_at timestamp NOT NULL,
+                		updated_at timestamp NOT NULL,
+                		PRIMARY KEY(id)
+                	);
     responses:
         - header:
-            packet_length: 33
+            packet_length: 7
             packet_number: 0
-          message: null
-    created: 1691308673
+            packet_type: MySQLOK
+          message:
+            affected_rows: 0
+            last_insert_id: 0
+            status_flags: 512
+            warnings: 256
+            info: ""
+    created: 1692177741
+---
+version: api.keploy.io/v1beta2
+kind: SQL
+name: mocks
+spec:
+    metadata:
+        operation: COM_STMT_PREPARE
+        responseOperation: COM_STMT_PREPARE_OK
+    requests:
+        - header:
+            packet_length: 48
+            packet_number: 0
+            packet_type: COM_STMT_PREPARE
+          message:
+            query: "\nSELECT * \nFROM url_map\nWHERE id = ?\n"
+    responses:
+        - header:
+            packet_length: 12
+            packet_number: 0
+            packet_type: COM_STMT_PREPARE_OK
+          message:
+            status: 0
+            statement_id: 1
+            num_columns: 4
+            num_params: 1
+            warning_count: 0
+    created: 1692177741
+---
+version: api.keploy.io/v1beta2
+kind: SQL
+name: mocks
+spec:
+    metadata:
+        operation: COM_STMT_EXECUTE
+        responseOperation: RESULT_SET_PACKET
+    requests:
+        - header:
+            packet_length: 23
+            packet_number: 0
+            packet_type: COM_STMT_EXECUTE
+          message:
+            statement_id: 1
+            flags: 0
+            iteration_count: 1
+            null_bitmap: []
+            param_count: 256
+            parameters: []
+    responses:
+        - header:
+            packet_length: 1
+            packet_number: 0
+            packet_type: RESULT_SET_PACKET
+          message:
+            columns:
+                - catalog: def
+                  schema: shorturl_db
+                  table: url_map
+                  org_table: url_map
+                  name: id
+                  org_name: id
+                  character_set: 45
+                  column_length: 32
+                  column_type: fieldTypeString
+                  flags: 20483
+                  decimals: 0
+                  filler: 0
+                  default_value: ""
+                - catalog: def
+                  schema: shorturl_db
+                  table: url_map
+                  org_table: url_map
+                  name: redirect_url
+                  org_name: redirect_url
+                  character_set: 45
+                  column_length: 600
+                  column_type: fieldTypeVarString
+                  flags: 20485
+                  decimals: 0
+                  filler: 0
+                  default_value: ""
+                - catalog: def
+                  schema: shorturl_db
+                  table: url_map
+                  org_table: url_map
+                  name: created_at
+                  org_name: created_at
+                  character_set: 63
+                  column_length: 19
+                  column_type: fieldTypeTimestamp
+                  flags: 4225
+                  decimals: 0
+                  filler: 0
+                  default_value: ""
+                - catalog: def
+                  schema: shorturl_db
+                  table: url_map
+                  org_table: url_map
+                  name: updated_at
+                  org_name: updated_at
+                  character_set: 63
+                  column_length: 19
+                  column_type: fieldTypeTimestamp
+                  flags: 4225
+                  decimals: 0
+                  filler: 0
+                  default_value: ""
+            rows:
+                - columns:
+                    created_at: "1986-01-21T10:39:46+05:30"
+                    id: cffgJto2
+                    redirect_url: https://www.example.com
+                    updated_at: "1986-01-21T11:53:09+05:30"
+                - null
+    created: 1692177741
+---
+version: api.keploy.io/v1beta2
+kind: SQL
+name: mocks
+spec:
+    metadata:
+        operation: COM_STMT_PREPARE
+        responseOperation: COM_STMT_PREPARE_OK
+    requests:
+        - header:
+            packet_length: 59
+            packet_number: 0
+            packet_type: COM_STMT_PREPARE
+          message:
+            query: |
+                UPDATE url_map
+                SET updated_at = ?
+                WHERE id = ?
+    responses:
+        - header:
+            packet_length: 12
+            packet_number: 0
+            packet_type: COM_STMT_PREPARE_OK
+          message:
+            status: 0
+            statement_id: 1
+            num_columns: 0
+            num_params: 2
+            warning_count: 0
+    created: 1692177742
+---
+version: api.keploy.io/v1beta2
+kind: SQL
+name: mocks
+spec:
+    metadata:
+        operation: COM_STMT_EXECUTE
+        responseOperation: MySQLOK
+    requests:
+        - header:
+            packet_length: 55
+            packet_number: 0
+            packet_type: COM_STMT_EXECUTE
+          message:
+            statement_id: 1
+            flags: 0
+            iteration_count: 1
+            null_bitmap: []
+            param_count: 256
+            parameters: []
+    responses:
+        - header:
+            packet_length: 48
+            packet_number: 0
+            packet_type: MySQLOK
+          message:
+            affected_rows: 0
+            last_insert_id: 1
+            status_flags: 512
+            warnings: 0
+            info: ""
+    created: 1692177742
