--- a/~/.vscode-root/CachedConfigurations/defaults/configurationDefaultsOverrides/configuration.json
+++ b/~/.vscode-root/CachedConfigurations/defaults/configurationDefaultsOverrides/configuration.json
@@ -1,1 +1,1 @@
-{"workbench.editor.preferHistoryBasedLanguageDetection":true,"window.commandCenter":true}
+{"diffEditor.experimental.useVersion2":true,"workbench.editor.preferHistoryBasedLanguageDetection":true,"window.commandCenter":true}
